manifests/static-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site-service
  namespace: personal-site
  labels:
    app: personal-site
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: personal-site
  type: LoadBalancer
