manifests/static-site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site-ingress
  namespace: personal-site
spec:
  defaultBackend:
    service:
      name: hugo-personal-site-service
      port:
        number: 80
  rules:
    - host: judsonstevens.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hugo-personal-site-service
                port:
                  number: 80
